--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -7,7 +7,7 @@
   </a>
   <div class="form">
     <h3>Update VOLU<span>N</span>TEER!</h3>
-    <form id="updateUser" method="POST" action="/api/users" class="_form" autocomplete="off">
+    <form id="updateUser" method="POST" class="_form" autocomplete="off">
       <div class="fields">
         <div class="_name">
           <!-- <label for="name">Name : </label> -->
