Update METHOD activated

--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -11,7 +11,7 @@
       <div class="fields">
         <div class="_name">
           <!-- <label for="name">Name : </label> -->
-          <input type="hidden" name="id" value="<%= user.id%>" />
+          <input type="hidden" name="id" id="id" value="<%= user._id%>" />
           <input type="text" name="name" id="name" placeholder="Name" value="<%= user.name%>" />
         </div>
         <div class="_age">
