--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("/public/pexels-pixabay-509922.jpg");
+  background-image: url("/public/pexels.jpg");
   background-size: cover;
   height: 100vh;
 }
-.rootz{
+.root {
   height: 100vh;
 }
 code {
