--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -52,8 +52,8 @@
             }
         }
         .center{
-            width: 100%;
-            height: 500px;
+            width: 400px;
+            height: 200px;
         }
     }
     .sidebar{
@@ -61,7 +61,9 @@
         flex-direction:column ;
         flex:1;
         border-right: 0.5px solid rgb(227, 227, 227);
-        
+        Link{
+            text-decoration: none;
+        }
         .top{
             height: 50px;
             display: flex;
