--- a/src/scss/addvolunteer.scss
+++ b/src/scss/addvolunteer.scss
@@ -5,7 +5,7 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     &::after{
         position: absolute;
@@ -14,21 +14,37 @@
         background-size: cover;
         z-index: -1;
     }
+    .formalation{
+        display: flex;
+        // border: 2px solid rgb(94, 161, 243);
+        // background-color: rgb(241, 241, 241);
+        border-radius: 10px;
+        width: 70%;
+        ._inputs{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 600px;
+        }
+    }
+    .image{
+        width: 200px;
+        height: 200px;
+    }
 }
-// select{
-//     border: none;
-//     padding: 10px 20px;
-//     border-radius: 10px;
-// }
-// select.sel{
-//     max-width: 10vw;
-//     min-width: 250px;
-// }
-// select:targets{
-//     border-color: aqua;
-// }
-// .image{
-//     width: 200px;
-//     height: 200px;
-//     clip-path: circle(50% at 50% 50%);
-// }
+select{
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+select.sel{
+    width: 900px;
+}
+select:targets{
+    border-color: aqua;
+}
+.image{
+    width: 200px;
+    height: 200px;
+    clip-path: circle(50% at 50% 50%);
+}
