--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,17 +1,26 @@
 ._conTainer{
-    background-image: linear-gradient(90deg to 270deg,#FFFFFF,#076585);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     .top{
-        padding-left: 70px;
-        flex: 4;
+        position: relative;
+        height: 700px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
+        z-index: 1;
+        &::after{
+            position: absolute;
+            content: "";
+            background-color: rgb(232, 232, 232);
+            width: 90%;
+            height: 90%;
+            opacity: 0.4;
+            z-index: -1;
+        }
         .top_left{
             width: 40%;
             height: 300px;
@@ -58,11 +67,52 @@
             // background-size: cover;
             // clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
         }
-        
+    }
+    .center{
+        background-color: #e5e5e5;
+        // position: relative;
+        width: 100%;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        // justify-content: ;
+        align-items: center;
+        .word{
+            padding: 20px 5px;
+        }
+        .cards{
+            display: flex;
+            width: 100vw;
+            align-items: center;
+            justify-content: center;
+            .cardInfo{
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 0 40px;
+                img{
+                    width: 150px;
+                    height:150px ;
+                    margin-bottom: 10px;
+                }
+                &::after{
+                    position: absolute;
+                    content: "";
+                    width: 200px;
+                    height: 200px;
+                    top: 70px;
+                    background-color: rgb(165, 168, 167);
+                    border: 1px solid #076585;
+                    border-radius: 10px;
+                    opacity: 0.2;  
+                }
+                
+            }
+        }
     }
     .bottom{
-        // background-color: gray;
-        flex: 1;
+        background-color: gray;
         display: flex;
         justify-content: space-around;
         align-items: center;
