--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -5,7 +5,7 @@
     align-items: center;
     z-index: 1;
     height: 100vh;
-    &::after{
+    &::before{
         position: absolute;
         content: "";
         width: 100%;
@@ -26,6 +26,7 @@
             img{
                 width: 200px;
                 height: 200px;
+                border-radius: 50px;
             }
         }
         .loginform{
