--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -9,7 +9,7 @@
         position: relative;
         height: 700px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
         z-index: 1;
         &::after{
@@ -24,7 +24,6 @@
         .top_left{
             width: 40%;
             height: 300px;
-            padding-left: 50px;
             display: flex;
             flex-direction: column;
             .left_top{
@@ -35,6 +34,7 @@
             }
             .left_bottom{
                 padding-left: 60px;
+                background-color: none;
                 width: 200px;
                 height: 50px;
                 display:flex;
@@ -61,8 +61,8 @@
             height: 70%;
             padding-right:80px ;
             img{
-                width: 500px;
-                height: 400px;
+                width:600px;
+                height: 500px;
             }
             // background-size: cover;
             // clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
@@ -91,12 +91,15 @@
                 flex-direction: column;
                 align-items: center;
                 margin: 0 40px;
+                z-index: 1;
                 img{
                     width: 150px;
                     height:150px ;
+                    border-radius: 20px;
                     margin-bottom: 10px;
                 }
                 &::after{
+                    z-index: -1;
                     position: absolute;
                     content: "";
                     width: 200px;
