--- a/src/scss/addvolunteer.scss
+++ b/src/scss/addvolunteer.scss
@@ -1,50 +1,62 @@
-._addvolunteer{
-    position: relative;
+._volunteer{
+    background-image: url('src/assets/img/pexels.jpg');
+    background-size: cover;
     width: 100vw;
     height: 100vh;
-    z-index: 1;
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    &::after{
-        position: absolute;
-        content: " ";
-        background-image: url("../assets/img/pexels-pixabay-256417.jpg");
-        background-size: cover;
-        z-index: -1;
+    .title{
+        margin-bottom: 50px;
     }
-    .formalation{
-        display: flex;
-        // border: 2px solid rgb(94, 161, 243);
-        // background-color: rgb(241, 241, 241);
-        border-radius: 10px;
-        width: 70%;
-        ._inputs{
+    .body{
+        ._form{
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 600px;
-        }
+            width: 80vw;
+            border: 2px solid rgb(6, 106, 168);
+            padding: 30px;
+            border-radius: 20px;
+            background-color: white;
+            .image{
+                position: relative;
+                left: 70px;
+                top: 40px;
+                width: 150px;
+                height: 150px;
+            }
+            ._inputs{
+                position: relative;
+                left: 200px;
+                display: grid;
+                grid-template-columns: 300px 300px;
+                grid-template-rows: 100px 100px;
+                gap: 0 20px;
+                .selection{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    select{
+                        padding: 0.375rem 0.75rem;
+                        background-clip: padding-box;
+                        border: 1px solid #ced4da;
+                        border-radius: 0.375rem;
+                        display: block;
+                        font-weight: 400;
+                        line-height: 1.5;
+                        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+                    }
+                }
+                ._button{
+                    position: relative;
+                    left: 50%;
+                    margin-top: 20px;
+                    button{
+                        width: 300px;
+                    }
+                }
+            }
+        }   
     }
-    .image{
-        width: 200px;
-        height: 200px;
-    }
-}
-select{
-    padding: 10px 20px;
-    border-radius: 10px;
-}
-select.sel{
-    width: 900px;
-}
-select:targets{
-    border-color: aqua;
-}
-.image{
-    width: 200px;
-    height: 200px;
-    clip-path: circle(50% at 50% 50%);
 }
