--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -61,8 +61,12 @@
         flex-direction:column ;
         flex:1;
         border-right: 0.5px solid rgb(227, 227, 227);
-        Link{
+        a{
             text-decoration: none;
+            color: rgb(120, 120, 120);
+            &:active{
+                color: black;
+            }
         }
         .top{
             height: 50px;
