--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -18,7 +18,8 @@
             background-color: rgb(232, 232, 232);
             width: 90%;
             height: 90%;
-            opacity: 0.4;
+            opacity: 0.3;
+            border-radius: 30px;
             z-index: -1;
         }
         .top_left{
