--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -52,8 +52,11 @@
             }
         }
         .center{
-            width: 400px;
-            height: 200px;
+            position: relative;
+            top: 50px;
+            left: 50px;
+            width: 800px;
+            height: 400px;
         }
     }
     .sidebar{
