--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -13,10 +13,31 @@
         flex-direction: column;
         .center{
             position: relative;
-            top: 50px;
-            left: 50px;
-            width: 800px;
-            height: 400px;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            &::after{
+                position: absolute;
+                content: '';
+                width: 100%;
+                height: 100%;
+                background-image: url('../assets/img/pexels-pixabay-256417.jpg');
+                background-size: cover;
+                z-index: -1;
+                opacity: 0.1;
+            }
+            thead{
+                background-color: rgb(89, 89, 89);
+                color: white;
+            }
+            .tb{
+                width: 70%;
+            }
+            a{
+                text-decoration: none;
+            }
         }
     }
 }
