--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -38,6 +38,10 @@
             a{
                 text-decoration: none;
             }
+            .chart{
+                width: 600px;
+                height: 300px;
+            }
         }
     }
 }
