--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -1,39 +1,12 @@
 .main{
-    display: flex;
+    width: 100%;
     height: 100vh;
-    width: 100vw;
-    background-color: white;
-    hr{
-        margin:0;
-        border: 0.5px solid rgb(227, 227, 227);
-    }
     .content{
-        flex:6;
+        margin-left:300px ;
         display: flex;
+        background-size: contain;
+        flex-wrap: wrap;
         flex-direction: column;
-        .center{
-            position: relative;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            &::after{
-                position: absolute;
-                content: '';
-                width: 100%;
-                height: 100%;
-                background-image: url('../assets/img/pexels-pixabay-256417.jpg');
-                background-size: cover;
-                z-index: -1;
-                opacity: 0.1;
-            }
-            .msg{
-                position:fixed;
-                top:700px;
-                left:1000px
-                
-            }
             thead{
                 background-color: rgb(89, 89, 89);
                 color: white;
@@ -44,11 +17,21 @@
             a{
                 text-decoration: none;
             }
-            .chart{
-                width: 600px;
-                height: 300px;
+        .content_area{
+            min-height: 86vh;
+            background-color: white;
+            border-radius: 8px;
+            margin: 1.5rem;
+            padding: 1.5rem;
+            box-shadow: 0px 0px 40px rgba(29, 58, 83, 0.15);
+            ._topContent{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
             }
+
         }
+        
     }
 }
 
