--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -24,6 +24,9 @@
             margin: 1.5rem;
             padding: 1.5rem;
             box-shadow: 0px 0px 40px rgba(29, 58, 83, 0.15);
+            .video{
+                width: 500px;
+            }
             ._topContent{
                 display: flex;
                 justify-content: space-between;
