--- a/src/scss/submitionForm.scss
+++ b/src/scss/submitionForm.scss
@@ -22,9 +22,9 @@
 
 }
 
-.create_lesson_formfield{
+.create_formfield{
     min-height: 80vh;
-    .create_lesson_formarea{
+    .create_formarea{
         border: .5px solid rgb(205, 205, 205);
         border-radius: 10px;
         margin: 100px 100px;
