--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,8 +1,10 @@
 .pdff{
-    overflow: hidden;
+    overflow: scroll;
+    width: 595px;
+    height: 600px;
     .sizee{
-        width: 595pt;
-        height: 735px;
+        width: 595px;
+        height: 600px;
     }
     
 }
