--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -24,8 +24,10 @@
             margin: 1.5rem;
             padding: 1.5rem;
             box-shadow: 0px 0px 40px rgba(29, 58, 83, 0.15);
-            .msg{
-                position: relative;
+            .emailContainer{
+                position: fixed;
+                bottom: 0;
+                right: 0;
             }
             .video{
                 width: 500px;
