--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -16,6 +16,7 @@
             }
             a{
                 text-decoration: none;
+                display: block;
             }
         .content_area{
             min-height: 86vh;
