--- a/src/scss/adminbar.scss
+++ b/src/scss/adminbar.scss
@@ -2,7 +2,7 @@
     position: relative;
     background-color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content:end;
     align-items: center;
     height: 75px;
     padding: 1.6rem;
