--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -1,60 +1,76 @@
-._container{
-    position:relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
+section{
     height: 100vh;
-    &::before{
-        position: absolute;
-        content: "";
-        width: 100%;
+    .container-fluid{
         height: 100%;
-        background-image:url('../assets/img/pexels-pixabay-256417.jpg') ;
-        background-size: cover;
-        opacity: 0.3;
-        z-index: -1;
-    }
-    .logincard{
-        width: 50%;
-        height: 70%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        .image{
-            img{
-                width: 200px;
-                height: 200px;
-                border-radius: 50px;
-            }
-        }
-        .loginform{
-            width: 500px;
-            display: flex;
-            justify-content: center;
-            form{
-                width: 400px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                ._input{
-                    font-size: large;
-                    width: 300px;
-                    background-color: none;
-                    border: solid 1px #076585;
-                    border-radius: 10px;
-                    margin: 10px;
-                    padding: 10px 10px;
-                    transition: all 0.3s ease ;
-                    &:hover{
-                        background-color: #f2f4f5;
-                    }
-                    &:active{
-                        border:none
-                    }
-                }
+        .row{
+            height: 100%;
+            .btn a{
+                text-decoration: none;
+                color: white;
+                display: block;
+                width: 100%;
+                height: 100%;
             }
         }
     }
 }
+// ._container{
+//     position:relative;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     z-index: 1;
+//     height: 100vh;
+//     &::before{
+//         position: absolute;
+//         content: "";
+//         width: 100%;
+//         height: 100%;
+//         background-image:url('../assets/img/pexels-pixabay-256417.jpg') ;
+//         background-size: cover;
+//         opacity: 0.3;
+//         z-index: -1;
+//     }
+//     .logincard{
+//         width: 50%;
+//         height: 70%;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-evenly;
+//         align-items: center;
+//         .image{
+//             img{
+//                 width: 200px;
+//                 height: 200px;
+//                 border-radius: 50px;
+//             }
+//         }
+//         .loginform{
+//             width: 500px;
+//             display: flex;
+//             justify-content: center;
+//             form{
+//                 width: 400px;
+//                 display: flex;
+//                 flex-direction: column;
+//                 align-items: center;
+//                 ._input{
+//                     font-size: large;
+//                     width: 300px;
+//                     background-color: none;
+//                     border: solid 1px #076585;
+//                     border-radius: 10px;
+//                     margin: 10px;
+//                     padding: 10px 10px;
+//                     transition: all 0.3s ease ;
+//                     &:hover{
+//                         background-color: #f2f4f5;
+//                     }
+//                     &:active{
+//                         border:none
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
