--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -9,6 +9,7 @@
     a{
         text-decoration: none;
         color: rgb(255, 255, 255);
+        display: block;
     }
     .top{
         
@@ -32,8 +33,6 @@
         }
         li{
             font-size:larger;
-            // display: flex;
-            // align-items: center;
             padding: 13px 10px;
             cursor: pointer;
             :hover{
